@startuml
'https://plantuml.com/class-diagram

class Persona {
    # String nombre
    # int edad
}

class Empleado {
    - float sueldoBruto
}

class Cliente {
    - String teléfono
    +mostrarDatos()
}

Persona <|-- Empleado
Persona <|-- Cliente

class Directivo {
    - int categoría
}

Empleado "0..*" -- "0..*" Directivo : tiene
Empleado <|-- Directivo

class Empresa {
    - String nombre
}
Empleado "1..*" --* "1" Empresa : tiene
Cliente "0..*" --o "1..*" Empresa : trabaja en


@enduml